po: update po/nl_NL/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011-2012
 # Jan Verlaan <jan@verlaan.org>, 2012
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-10 16:53+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1117,7 +1117,7 @@ msgstr "Aantal Toelagen"
 
 #: CRM/Report/Form/Instance.php
 msgid "You do not have permission to access this report."
-msgstr "U heeft geen rechten om dit rapport te openen."
+msgstr "U mag dit rapport niet openen."
 
 #: CRM/Report/Form/Instance.php
 msgid "Report Description"
@@ -1205,7 +1205,7 @@ msgstr "Klikken: %1"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Opt-out"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Unsubscribed"
@@ -2090,20 +2090,20 @@ msgstr "Het standaard aantal regels per pagina is voor de meeste rapporten is 50
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Created By"
-msgstr ""
+msgstr "Report Instantie Aanmaker"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Owned By"
-msgstr ""
+msgstr "Report Instantie Eigenaar"
 
 #: CRM/Report/Form/Activity.php
 msgid "Include Case Activities"
-msgstr ""
+msgstr "Toevoegen Dossieractiviteiten"
 
 #: CRM/Report/Form/Activity.php
 msgid ""
 "Please enable 'Include Case Activities' to filter with Case Activity types."
-msgstr ""
+msgstr "Schakel a.u.b. 'Toevoegen Dossieractiviteiten' in om te filteren op activiteitstypes."
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Subtype (Contact A)"
@@ -2162,7 +2162,7 @@ msgstr "Gemiddelde bijdrage"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Premium Fulfilled Date"
-msgstr ""
+msgstr "Datum beloning afgerond"
 
 #: CRM/Report/Form.php
 msgid "Columns"
@@ -2182,31 +2182,31 @@ msgstr "Sortering"
 
 #: CRM/Report/Form.php
 msgid "Contact Prefix"
-msgstr ""
+msgstr "Contact prefix"
 
 #: CRM/Report/Form.php
 msgid "Nick Name"
-msgstr ""
+msgstr "Roepnaam"
 
 #: CRM/Report/Form.php
 msgid "Contact Suffix"
-msgstr ""
+msgstr "Contact achtervoegsel"
 
 #: CRM/Report/Form.php
 msgid "Address Greeting"
-msgstr ""
+msgstr "Adres aanhef"
 
 #: CRM/Report/Form.php
 msgid "Contact Job title"
-msgstr ""
+msgstr "Contact functie"
 
 #: CRM/Report/Form.php
 msgid "Contact identifier from external system"
-msgstr ""
+msgstr "Contact identifier van extern systeem"
 
 #: CRM/Report/Form.php
 msgid "%1 for this %2."
-msgstr ""
+msgstr "%1 van de %2."
 
 #: CRM/Report/Info.php
 msgid "access CiviReport"
@@ -2242,7 +2242,7 @@ msgstr "beheren rapportsjablonen"
 
 #: CRM/Report/Page/Report.php
 msgid "%1 - Template"
-msgstr ""
+msgstr "%1 - Sjabloon"
 
 #: templates/CRM/Report/Form/Fields.tpl
 msgid "Title and Format"
