po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-10 17:15+0000\n"
+"PO-Revision-Date: 2016-01-12 02:18+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -25901,8 +25901,8 @@ msgstr "Deelnemer ID"
 #: CRM/Contact/Form/Task/Batch.php
 msgid "Contact Subtype field of 1 contact has not been updated."
 msgid_plural "Contact Subtype field of %count contacts has not been updated."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Contact subtype veld van 1 contact is niet gewijzigd."
+msgstr[1] "Contact subtype veld van %count contacten zijn niet gewijzigd."
 
 #: CRM/Contact/Form/Task/Map.php
 msgid ""
@@ -25920,7 +25920,7 @@ msgstr "ID: %1"
 
 #: CRM/Core/BAO/Address.php
 msgid "You seem to have deleted the relationship type 'Household Member of'"
-msgstr ""
+msgstr "Het relatietype 'Lid van het huishouden' ontbreekt."
 
 #: CRM/Core/BAO/Navigation.php
 msgid "Log out"
@@ -25944,7 +25944,7 @@ msgstr "Specifieke veld HTML type"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Job Log ID"
-msgstr ""
+msgstr "Job Log ID"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Timestamp"
@@ -25952,7 +25952,7 @@ msgstr "Tijdstempel"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Extended Data"
-msgstr ""
+msgstr "Uitgebreide gegevens"
 
 #: CRM/Core/DAO/RecurringEntity.php
 msgid "Parent ID"
@@ -26114,7 +26114,7 @@ msgstr "Herhaal entiteit"
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Could not find contributionRecur id"
-msgstr ""
+msgstr "Het contributionRecur-id ontbreekt."
 
 #: CRM/Core/Permission.php
 msgid "Create a new contact record in CiviCRM"
@@ -26279,7 +26279,7 @@ msgstr "bekijk mijn facturen"
 
 #: CRM/Core/Permission.php
 msgid "Allow users to view/ download their own invoices"
-msgstr ""
+msgstr "Toestaan dat gebruikers hun eigen facturen bekijken en downloaden"
 
 #: CRM/Core/Resources.php
 msgid "Upcoming"
@@ -26358,21 +26358,21 @@ msgstr "Prijsveld tekst achteraf"
 msgid ""
 "Cannot add or update profile field \"%1\" with combination of Household or "
 "Organization or any subtypes of Household or Organization."
-msgstr ""
+msgstr "Het profielveld \"%1\" kan niet een combinatie van Huishouden of Organisatie of subtypes daarvan hebben."
 
 #: CRM/UF/Page/ProfileEditor.php
 msgid "Free HTML"
-msgstr ""
+msgstr "Vrije HTML"
 
 #: CRM/UF/Page/ProfileEditor.php
 msgid "Formatting"
-msgstr ""
+msgstr "Opmaken"
 
 #: CRM/Utils/Check/Security.php
 msgid ""
 "The system administrator has disabled security settings (%1). Connections to"
 " remote applications are insecure."
-msgstr ""
+msgstr "De beheerder heeft de veiligheidinstellingen (%1) uitgeschakeld. Verbindingen met externe applicaties zijn onveilig."
 
 #: CRM/Utils/DeprecatedUtils.php
 msgid "Event templates are not meant to be registered."
@@ -26413,7 +26413,7 @@ msgstr "Controleer of u nog bent ingelogd en of u toegangsrecht hebt voor deze f
 
 #: js/crm.ajax.js
 msgid "Print window"
-msgstr ""
+msgstr "Scherm afdrukken"
 
 #: js/jquery/jquery.crmeditable.js packages/HTML/QuickForm/ckeditor.php
 #: packages/HTML/QuickForm/tinymce.php
@@ -26424,7 +26424,7 @@ msgstr "Klik op te wijzigen"
 
 #: js/model/crm.uf.js
 msgid "Markup"
-msgstr ""
+msgstr "Markup"
 
 #: templates/CRM/Activity/Form/Activity.tpl
 msgid "Are you sure you want to delete "
@@ -26455,13 +26455,13 @@ msgstr "Contacttype: %1"
 msgid ""
 "This smart group will stay up-to-date with all contacts who meet the search "
 "criteria."
-msgstr ""
+msgstr "Deze smartgroep blijft actueel met alle contacten die aan de criteria voldoen."
 
 #: templates/CRM/Contact/Form/Task/SaveSearch.tpl
 msgid ""
 "NOTE: Even if only a few contacts have been selected from the search "
 "results, all contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "NB: Ook als er maar een paar contacten zijn geselecteerd, alle contacten die aan de volgende criteria voldoen zullen deel uitmaken van de groep."
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid ""
@@ -26589,7 +26589,7 @@ msgstr "Er zijn deelnemers aangemeld voor herhaalde evenementen verwijderd uit d
 
 #: templates/CRM/Core/Page/RecurringEntityPreview.tpl
 msgid "A repeating set will be created with the following dates."
-msgstr ""
+msgstr "Een volgende set zal worden aangemaakt op de volgende dagen."
 
 #: templates/CRM/Core/Page/RecurringEntityPreview.tpl
 msgid "Start date"
