--- a/po/th_TH/countries.po
+++ b/po/th_TH/countries.po
@@ -5,13 +5,13 @@
 # Translators:
 # AriesAnywhere Anywhere <ariesanywhere@gmail.com>, 2012
 # AriesAnywhere Anywhere <ariesanywhere@gmail.com>, 2012
-# Rockers <sumorock@hotmail.com>, 2015
+# Rockers <sumorock@hotmail.com>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-11 21:19+0000\n"
+"Last-Translator: Rockers <sumorock@hotmail.com>\n"
 "Language-Team: Thai (Thailand) (http://www.transifex.com/civicrm/civicrm/language/th_TH/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -213,7 +213,7 @@ msgstr ""
 
 msgctxt "country"
 msgid "Chad"
-msgstr ""
+msgstr "ชาด"
 
 msgctxt "country"
 msgid "Chile"
@@ -225,7 +225,7 @@ msgstr "China"
 
 msgctxt "country"
 msgid "Christmas Island"
-msgstr ""
+msgstr "เกาะคริสต์มาส"
 
 msgctxt "country"
 msgid "Cocos (Keeling) Islands"
@@ -233,11 +233,11 @@ msgstr ""
 
 msgctxt "country"
 msgid "Colombia"
-msgstr ""
+msgstr "โคลอมเบีย"
 
 msgctxt "country"
 msgid "Comoros"
-msgstr ""
+msgstr "คอโมโรส"
 
 msgctxt "country"
 msgid "Congo, The Democratic Republic of the"
@@ -265,15 +265,15 @@ msgstr "Croatia"
 
 msgctxt "country"
 msgid "Cuba"
-msgstr ""
+msgstr "คิวบา"
 
 msgctxt "country"
 msgid "Cyprus"
-msgstr ""
+msgstr "ไซปรัส"
 
 msgctxt "country"
 msgid "Czech Republic"
-msgstr ""
+msgstr "สาธารณรัฐเช็ก"
 
 msgctxt "country"
 msgid "Denmark"
