--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-10 18:18+0000\n"
+"PO-Revision-Date: 2016-01-12 01:18+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -596,7 +596,7 @@ msgstr "CiviCRM-componenten inschakelen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage Extensions"
-msgstr "Uitbreidingen beheren"
+msgstr "Extensies beheren"
 
 msgctxt "menu"
 msgid "Database Upgrades"
