po: update po/nl_NL/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/member.po
+++ b/po/nl_NL/member.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2012
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011
 # Kevin Levie <kevin@levity.nl>, 2015
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-12 01:32+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2373,7 +2373,7 @@ msgstr "Klik op <a %1>Lidmaatschap indienen met creditcard</a> om aan de hand va
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status(s)"
-msgstr ""
+msgstr "Lidmaatschap Status(sen)"
 
 #: CRM/Member/Form/Membership.php
 msgid "Office Credit Card Membership Signup Contribution"
@@ -2395,13 +2395,13 @@ msgstr "De prijsset van dit lidmaatschap dat bij de online bijdrage hoort staat 
 msgid ""
 "You need to enable Separate Membership Payment when online contribution page"
 " is configured for both Membership and Recurring Contribution"
-msgstr ""
+msgstr "U moet Gescheiden Lidmaatschapsbetalingen inschakelen indien de online bijdragepagina voor zowel Lidmaatschap als Periodieke Betaling wordt gebruikt."
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid ""
 "You cannot enable both Recurring Contributions and Auto-renew memberships on"
 " the same online contribution page"
-msgstr ""
+msgstr "U kunt niet zowel Periodieke Bijdragen als Automatisch verlengen van Lidmaatschap instellen op dezelfde bijdragepagina."
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid ""
@@ -2412,7 +2412,7 @@ msgstr "Lidmaatschapsverlenging met een creditcard kan alleen als er kosten aan 
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid "Includes %1 amount of %2"
-msgstr ""
+msgstr "Inclusief %1 bedrag van %2"
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid "Office Credit Card Membership Renewal Contribution"
@@ -2482,13 +2482,13 @@ msgstr "Negeer einddatum"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Automatically email a membership confirmation and receipt to %1 ?"
-msgstr ""
+msgstr "Automatisch een bevestiging van lidmaatschap en ontvangst e-mailen naar %1 ?"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "OR if the payment is from a different contact, this email will only go to "
 "them."
-msgstr ""
+msgstr "OF als de betaling door een ander contact is gedaan, dan alleen e-mailen naar dat contact."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "No contacts are currently eligible to inherit this relationship."
