--- a/po/nl_NL/financial.po
+++ b/po/nl_NL/financial.po
@@ -3,13 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-12 00:16+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,7 +61,7 @@ msgstr "Het definitief verwijderen is niet mogelijk omdat er een of meer relatie
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "The following tables have an entry for this financial type: %1"
-msgstr ""
+msgstr "In de volgende tabellen wordt dit financieel type  %1 gebruikt"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid ""
@@ -333,7 +333,7 @@ msgid ""
 " account '%2'. That income account, along with standard financial accounts "
 "'%3', '%4' and '%5' have been linked to the financial type. You may edit or "
 "replace those relationships here."
-msgstr ""
+msgstr "Uw financieel type '%1' is aangemaakt, tesamen met een bijbehorend account '%2' voor het inkomen. Dit account, is net als de standaard financiele accounts '%3', '%4' en '%5' gekoppeld aan het financieel type. U kunt deze relaties hier wijzigen of vervangen."
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 #: templates/CRM/Financial/Page/FinancialType.tpl
@@ -896,7 +896,7 @@ msgid ""
 "Your Financial \"%1\" Type has been created and assigned to an existing "
 "financial account with the same title. You should review the assigned "
 "account and determine whether additional account relationships are needed."
-msgstr ""
+msgstr "Uw financieel type \"%1\" is aangemaakt en gekoppeld aan het bestaande overeenkomende account. Controleer dit account en bepaal of er aanvullende relaties met accounts nodig zijn."
 
 #: CRM/Financial/Form/FinancialType.php
 msgid ""
@@ -904,7 +904,7 @@ msgid ""
 "income account \"%2\". That income account, along with standard financial "
 "accounts \"%3\", \"%4\" and \"%5\" have been linked to the financial type. "
 "You may edit or replace those relationships here."
-msgstr ""
+msgstr "Uw financieel type \"%1\" is aangemaakt, tesamen met een bijbehorend account \"%2\" voor het inkomen. Dit account, is net als de standaard financiele accounts \"%3\", \"%4\" en \"%5\" gekoppeld aan het financieel type. U kunt deze relaties hier wijzigen of vervangen."
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid "Financial Type Account"
@@ -940,19 +940,19 @@ msgstr "Methode beschrijving"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Created ID"
-msgstr ""
+msgstr "Created ID"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Expiry Date"
-msgstr ""
+msgstr "Vervaldatum"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Masked Account Number"
-msgstr ""
+msgstr "Gemaskeerd rekeningnummer"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "IP Address"
-msgstr ""
+msgstr "IP-adres"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Taxable accounts should have Financial Account Type set to Liability."
