po: update po/nl_NL/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/extension.po
+++ b/po/nl_NL/extension.po
@@ -5,15 +5,15 @@
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2013
 # brouwser <brouwer@ee-atwork.nl>, 2013
-# HanV <han.velthuis@home.nl>, 2013,2015
+# HanV <han.velthuis@home.nl>, 2013,2015-2016
 # HanV <han.velthuis@home.nl>, 2013,2015
 # Kevin Levie <kevin@levity.nl>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-12 01:18+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,12 +29,12 @@ msgstr "Mappen niet schrijfbaar"
 msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
-msgstr "De webserver kan niet schrijven in de uitbreidingencachedirectory (%1). Ga a.u.b. naar de pagina <a href=\"%2\">padinstellingen</a> en corrigeer dit.<br/>"
+msgstr "De webserver kan niet schrijven in de cache-map van de extensies (%1). Ga a.u.b. naar de pagina <a href=\"%2\">padinstellingen</a> en corrigeer dit.<br/>"
 
 #: CRM/Extension/Browser.php
 msgid ""
 "Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "De externe URL van uitbreidingen wordt niet gecontroleerd aangezien ext_repo_url op Onwaar staat."
+msgstr "De externe URL van extensies wordt niet gecontroleerd aangezien ext_repo_url op Onwaar staat."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -42,7 +42,7 @@ msgid ""
 "please check your webserver can make external HTTP requests or contact "
 "CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br "
 "/>"
-msgstr "De openbare lijst met CiviCRM-uitbreidingen op %1 kan niet worden benaderd - controleer a.u.b. of uw webserver externe HTTP-verzoeken kan doen neem contact op met het CiviCRM-team op het <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br />"
+msgstr "De openbare lijst met CiviCRM-extensies op %1 kan niet worden benaderd - controleer a.u.b. of uw webserver externe HTTP-verzoeken kan doen of neem contact op met het CiviCRM-team op het <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br />"
 
 #: CRM/Extension/Browser.php
 msgid "Connection Error"
@@ -55,11 +55,11 @@ msgid ""
 "from here</a>). If you want to install an extension which is not marked as "
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
-msgstr "Er zijn momenteel geen uitbreidingen in de openbare lijst met CiviCRM-uitbreidingen die compatibel zijn met versie %2 (<a href=\"%1\">hier gevraagde uitbreidingen</a>). Als u een uitbreiding wilt installeren die niet aangemerkt is als compatibel, kunt u mogelijk <a href=\"%3\">handmatig uitbreidingen downloaden en installeren</a> (afhankelijk van de toegang tot uw webserver).<br />"
+msgstr "Er zijn momenteel geen extensies in de openbare lijst van CiviCRM die compatibel zijn met versie %2 (<a href=\"%1\">hier gevraagde extensies</a>). Als u een extensie wilt installeren die niet aangemerkt is als compatibel, kunt u mogelijk <a href=\"%3\">handmatig extensies downloaden en installeren</a> (afhankelijk van de toegang tot uw webserver).<br />"
 
 #: CRM/Extension/Browser.php
 msgid "No Extensions Available for this Version"
-msgstr "Er zijn geen uitbreidingen beschikbaar voor deze versie"
+msgstr "Er zijn geen extensies beschikbaar voor deze versie"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -81,29 +81,29 @@ msgstr "Een extensie container is gedefinieerd met een blanco URL"
 msgid ""
 "Failed to determine URL for extension (%1). Please update <a "
 "href=\"%2\">Resource URLs</a>."
-msgstr "Kon de URL van uitbreiding (%1) niet bepalen. Wijzig a.u.b. de <a href=\"%2\">bron-URL's</a>."
+msgstr "De URL van de extensie (%1) kan niet bepaald worden. Wijzig a.u.b. de <a href=\"%2\">bron-URL's</a>."
 
 #: CRM/Extension/Container/Basic.php
 msgid "Parse error in extension: %1"
-msgstr ""
+msgstr "Fout bij verwerken extensie: %1"
 
 #: CRM/Extension/Container/Default.php
 msgid ""
 "The extensions directory is not properly set. Please go to the <a "
 "href=\"%1\">path setting page</a> and correct it.<br/>"
-msgstr "De uitbreidingendirectory is niet goed ingesteld. Ga a.u.b. naar de pagina <a href=\"%1\">padinstellingen</a> en corrigeer deze.<br/>"
+msgstr "De map van de extensies is niet goed ingesteld. Ga a.u.b. naar de <a href=\"%1\">padinstellingen</a> en corrigeer dit.<br/>"
 
 #: CRM/Extension/Container/Default.php
 msgid ""
 "The extensions URL is not properly set. Please go to the <a href=\"%1\">URL "
 "setting page</a> and correct it.<br/>"
-msgstr "De uitbreiding-URL is niet goed ingesteld. Ga a.u.b. naar de pagina <a href=\"%1\">URL-instellingen</a> en corrigeer deze.<br/>"
+msgstr "De URL van de extensies is niet goed ingesteld. Ga a.u.b. naar de <a href=\"%1\">URL-instellingen</a> en corrigeer dit.<br/>"
 
 #: CRM/Extension/Downloader.php
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr ""
+msgstr "De extensie map is niet ingesteld of is niet schrijfbaar. Klik <a href='%1'>hier</a> om deze map in te stellen."
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
@@ -114,7 +114,7 @@ msgid ""
 "You will not be able to install extensions at this time because your "
 "installation of PHP does not support ZIP archives. Please ask your system "
 "administrator to install the standard PHP-ZIP extension."
-msgstr "U kunt momenteel geen uitbreidingen installeren omdat uw de installatie van PHP geen ZIP-bestanden ondersteunt. Vraag a.u.b. de systeembeheerder om de standaard PHP-ZIP-uitbreiding te installeren."
+msgstr "U kunt nu geen extensie installeren omdat uw installatie van PHP geen ZIP-bestanden ondersteunt. Vraag a.u.b. de systeembeheerder om de standaard PHP-ZIP-extensie te installeren."
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
@@ -130,7 +130,7 @@ msgstr "Installatie fout"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension to %1."
-msgstr "Kon de uitbreiding %1 niet uitpakken."
+msgstr "Uitpakken extensie %1 is mislukt."
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension."
@@ -158,7 +158,7 @@ msgstr "Betalingshoek (%1) niet herkend in %2::%3"
 msgid ""
 "A copy of the extension (%1) is in a system folder (%2). The system copy "
 "will be preserved, but the new copy will be used."
-msgstr "Er staat een kopie van de uitbreiding (%1) in een systeemmap (%2). Het systeemexemplaar wordt bewaard, maar het nieuwe exemplaar zal worden gebruikt."
+msgstr "Er staat een kopie van de extensie (%1) in een systeemmap (%2). Deze versie wordt bewaard, maar de nieuwe versie zal worden gebruikt."
 
 #: CRM/Extension/Downloader.php
 msgid ""
