--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2012
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-12 00:15+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -829,7 +829,7 @@ msgstr "Elke"
 #: CRM/Contribute/Form/Contribution/Main.php
 #: CRM/Event/Form/Registration/Register.php
 msgid "Please select a Payment Method"
-msgstr ""
+msgstr "Kies a.u.b. een betaalmethode"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 #: CRM/Event/Form/Registration/Register.php
@@ -2187,7 +2187,7 @@ msgstr "Online registratie toestaan"
 
 #: CRM/Badge/Form/Layout.php CRM/Financial/DAO/PaymentToken.php
 msgid "Token"
-msgstr ""
+msgstr "Token"
 
 #: CRM/Batch/Form/Batch.php CRM/Financial/Form/Search.php
 msgid "Number of Items"
@@ -2217,7 +2217,7 @@ msgstr "Is betaalblok verplicht"
 
 #: CRM/Contribute/DAO/ContributionRecur.php CRM/Financial/DAO/PaymentToken.php
 msgid "Payment Token ID"
-msgstr ""
+msgstr "Betaling Token ID"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Report/Form/Contribute/Recur.php
@@ -2249,7 +2249,7 @@ msgstr "Titel is een verplicht veld."
 
 #: CRM/Contribute/Form/Search.php CRM/Report/Form/Contribute/SoftCredit.php
 msgid "Contributor Name"
-msgstr ""
+msgstr "Contribuant Naam"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
@@ -2368,7 +2368,7 @@ msgstr "bedrag voor belasting:"
 #: CRM/Member/Form/Search.php CRM/Report/Form/Member/Lapse.php
 #: CRM/Report/Form/Membership/Summary.php
 msgid "Member Name"
-msgstr ""
+msgstr "Lid Naam"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 msgid "Total Pledged"
