po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -5,7 +5,7 @@
 # Translators:
 # Calbasi <joan@calbasi.net>, 2013-2015
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2013-2014
-# francescbassas <francesc@babu.cat>, 2013-2015
+# francescbassas <francesc@babu.cat>, 2013-2016
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012-2013
 # Marti <m.prat@ixiam.com>, 2013-2014
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 09:59+0000\n"
+"PO-Revision-Date: 2016-01-13 01:18+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -20096,7 +20096,7 @@ msgstr "Informe resum de correu"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Summary statistics for mailings"
-msgstr "resum d'estadístiques per a correus"
+msgstr "Resum d'estadístiques pels mailings"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Mail Opened Report"
