po: update po/fr_FR/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/install.po
+++ b/po/fr_FR/install.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Anaïs V. <anais.vidal1@gmail.com>, 2015
+# Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
 # Barnicol <g.barnicol@gmail.com>, 2015
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:24-0500\n"
-"PO-Revision-Date: 2015-12-21 20:50+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-01-13 15:39+0000\n"
+"Last-Translator: Baptiste Bisson <bbisson.baptiste@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -287,13 +288,13 @@ msgstr "Les problèmes suivants m'empêchent d'installer CiviCRM :"
 msgid ""
 "You need PHP version %1 or later, only %2 is installed. Please upgrade your "
 "server, or ask your web-host to do so."
-msgstr ""
+msgstr "Vous avez besoin d'une version PHP %1 ou plus, seulement la %2 est installé. Merci de mettre à jour votre serveur, ou demandez à votre hébergeur de le faire."
 
 #: install/index.php
 msgid ""
 "PHP version %1 is not supported. PHP version earlier than %2 is required. "
 "You might want to downgrade your server, or ask your web-host to do so."
-msgstr ""
+msgstr "Version PHP %1 n'est pas supporté. Une version PHP antérieur à %2 est requis. Vous voudrez peut-être rétrograder votre serveur, ou demandez à votre hébergeur de le faire."
 
 #: install/index.php
 msgid "file '%1' not found"
@@ -307,7 +308,7 @@ msgstr "Dossier '%1' trouvé"
 msgid ""
 "The user account used by your web-server %1 needs to be granted write access"
 " to the following directory in order to configure the CiviCRM settings file:"
-msgstr ""
+msgstr "Le compte utilisateur utilisé par votre serveur %1 a besoin d'avoir accordé l'accès écriture sur le répertoire suivant dans le but de configurer le fichier d'options CiviCRM"
 
 #: install/index.php
 msgid ""
