--- a/po/fr_FR/financial.po
+++ b/po/fr_FR/financial.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
 # Nicolas <nicolas@cividesk.com>, 2013
 # Peter <webmaster@lebouclier.com>, 2015
 # Peter <webmaster@lebouclier.com>, 2015-2016
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-03 21:11+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-01-13 15:39+0000\n"
+"Last-Translator: Baptiste Bisson <bbisson.baptiste@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -130,28 +131,28 @@ msgstr "Date de transaction"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Trxn Result Code"
-msgstr ""
+msgstr "Code résultat de la transaction"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Status Id"
-msgstr ""
+msgstr "id de statut de transaction financière"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Suffix for PHP clas name implementation"
-msgstr ""
+msgstr "Suffix for PHP clas name implementation"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor variable name to be used in code"
-msgstr ""
+msgstr "Nom de variable de la passerelle de paiement à utiliser dans le code"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor Title"
-msgstr ""
+msgstr "Titre de la passerelle de paiement"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for User Name if used"
-msgstr ""
+msgstr "Libellé du nom d'utilisateur si nécessaire"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for password"
@@ -167,15 +168,15 @@ msgstr "Libellé pour le sujet"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Site URL"
-msgstr ""
+msgstr "URL par défaut pour le site réel"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default API Site URL"
-msgstr ""
+msgstr "URL par défaut pour l'API du site"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Recurring Payments URL"
-msgstr ""
+msgstr "URL par défaut pour les paiements périodiques réels"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Button URL"
@@ -187,15 +188,15 @@ msgstr "URL par défaut du site de test"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test API URL"
-msgstr ""
+msgstr "URL par défaut pour le test de l'API"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test Recurring Payment URL"
-msgstr ""
+msgstr "URL par défaut pour le test de paiement périodique"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test Button URL"
-msgstr ""
+msgstr "URL par défaut pour le test du bouton"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Accounting Batch - %1"
