--- a/po/de_DE/campaign.po
+++ b/po/de_DE/campaign.po
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 11:52+0000\n"
-"Last-Translator: Rolf Schumann <rolf.schumann@robinwood.de>\n"
+"PO-Revision-Date: 2016-01-13 09:52+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
