--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -24,7 +24,7 @@
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2012-2014
 # Jo <jo@caj-augsburg.de>, 2011-2012
 # Konrad Iwer <konrad.pssc@gmail.com>, 2014
-# Martin Peth <peth@systopia.de>, 2013-2015
+# Martin Peth <peth@systopia.de>, 2013-2016
 # metalmatze <matthias.hahn@web.de>, 2014
 # metalmatze <matthias.hahn@web.de>, 2014
 # Michael <inactive+MiQ@transifex.com>, 2012
@@ -47,8 +47,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-22 12:31+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-01-13 15:17+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2715,7 +2715,7 @@ msgstr "Konnte contact_id und/oder contact_type nicht finden."
 
 #: CRM/Contact/Form/Contact.php
 msgid "The Location Type should be set if there is  %1 information."
-msgstr "Die Adresskategorie muss gesetzt werden, wenn es %1 Informationen dazu gibt."
+msgstr "Die Adresskategorie muss gesetzt werden, wenn eine %1 angegeben wird."
 
 #: CRM/Contact/Form/Contact.php
 msgid "%1 already exist."
@@ -17993,7 +17993,7 @@ msgstr "Warnung: Das Löschen dieses Profils entfernt es von den Profile Formula
 msgid ""
 "Select the type of CiviCRM record and the field you want to include in this "
 "Profile."
-msgstr "Wählen den Datentyp und das Feld, das Sie dem Profil hinzufügen möchten."
+msgstr "Wählen Sie den Datentyp und das Feld, das Sie dem Profil hinzufügen möchten."
 
 #: templates/CRM/UF/Form/Field.tpl
 msgid ""
