--- a/po/de_DE/pcp.po
+++ b/po/de_DE/pcp.po
@@ -9,7 +9,7 @@
 # Fabian <schuttenberg@systopia.de>, 2015
 # MichaSeidler <info@euroconsults.eu>, 2012
 # Jo <jo@caj-augsburg.de>, 2012
-# Martin Peth <peth@systopia.de>, 2014-2015
+# Martin Peth <peth@systopia.de>, 2014-2016
 # Martin Peth <peth@systopia.de>, 2012
 # Fabian <schuttenberg@systopia.de>, 2013
 # Sven <sven.lorkowski@freenet.de>, 2015
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-22 12:31+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-01-13 15:06+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -377,7 +377,7 @@ msgid ""
 "We can't load the requested web page due to an incomplete link. This can be "
 "caused by using your browser's Back button or by using an incomplete or "
 "invalid link."
-msgstr "Wir können die angefragte Webseite wegen eines unvollständigen Links nicht laden. Dies kann durch das Verwenden der Taste Back Ihres Browsers oder durch das Verwenden eines unvollständigen oder ungültigen Links verursacht werden."
+msgstr "Wir können die angefragte Webseite wegen eines unvollständigen Links nicht laden. Dies kann durch das Verwenden der Zurück-Taste Ihres Browsers oder durch das Verwenden eines unvollständigen oder ungültigen Links verursacht werden."
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid "Could not find source page id."
