--- a/po/fr_FR/case.po
+++ b/po/fr_FR/case.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
 # Barnicol <g.barnicol@gmail.com>, 2015
 # SR71 <ben.alard@gmail.com>, 2012
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-02 15:51+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-01-13 15:39+0000\n"
+"Last-Translator: Baptiste Bisson <bbisson.baptiste@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -219,7 +220,7 @@ msgstr "Ré-initialiser la date de début"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Case type changed from %1 to %2"
-msgstr ""
+msgstr "Le type du dossier a été changé de %1 a %2"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Case Type changed successfully."
