--- a/po/fr_FR/grant.po
+++ b/po/fr_FR/grant.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -11,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-03 21:10+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-01-13 15:39+0000\n"
+"Last-Translator: Baptiste Bisson <bbisson.baptiste@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -106,7 +107,7 @@ msgstr "Devise de la subvention"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Rationale"
-msgstr ""
+msgstr "Raison de la subvention"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Status Id"
@@ -178,7 +179,7 @@ msgstr "Sollicité"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Granted"
-msgstr ""
+msgstr "Accepté"
 
 #: CRM/Grant/Task.php
 msgid "Print Grants"
