--- a/po/fr_FR/member.po
+++ b/po/fr_FR/member.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
 # SR71 <ben.alard@gmail.com>, 2012
 # CARFIL <c.carfil.it@mairie-dammarie-les-lys.fr>, 2013
 # Peter <webmaster@lebouclier.com>, 2015
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-31 16:56+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-01-13 15:39+0000\n"
+"Last-Translator: Baptiste Bisson <bbisson.baptiste@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -197,7 +198,7 @@ msgstr "Identifiant du membre direct"
 #: CRM/Member/DAO/Membership.php CRM/Member/DAO/MembershipLog.php
 #: CRM/Member/DAO/MembershipType.php
 msgid "Max Related"
-msgstr ""
+msgstr "Max de relations"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Type Default"
