--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -17,7 +17,7 @@
 # MichaSeidler <info@euroconsults.eu>, 2012
 # Jan <unreal@gmx.ch>, 2013
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2013
-# Martin Peth <peth@systopia.de>, 2014-2015
+# Martin Peth <peth@systopia.de>, 2014-2016
 # MichaSeidler <info@euroconsults.eu>, 2011
 # Martin Peth <peth@systopia.de>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -33,8 +33,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-22 12:31+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-01-13 15:06+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -732,11 +732,11 @@ msgstr "Auf mögliche Duplikate prüfen"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Individual Display Name Format"
-msgstr "Einzelperson Anzeige Name Format"
+msgstr "Format des Anzeigenamens bei Personen"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Individual Sort Name Format"
-msgstr "Einzelperson Sortierung Name Format"
+msgstr "Format des Sortiernamens bei Personen"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Textarea"
@@ -6041,7 +6041,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Enable Popup Forms"
-msgstr ""
+msgstr "Popup-Formulare aktivieren"
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "Dashboard entries"
