po: update po/it_IT/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/common-base.po
+++ b/po/it_IT/common-base.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"PO-Revision-Date: 2016-01-13 23:03+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -24507,7 +24507,7 @@ msgstr ""
 
 #: CRM/Core/DAO/UFMatch.php
 msgid "CiviCRM Contact ID"
-msgstr ""
+msgstr "ID del Contatto CiviCRM"
 
 #: CRM/Core/DAO/WordReplacement.php
 msgid "Word Replacement ID"
