po: update po/it_IT/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/common-components.po
+++ b/po/it_IT/common-components.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"PO-Revision-Date: 2016-01-13 22:54+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -1970,7 +1970,7 @@ msgstr "Ragione del bounce"
 #: templates/CRM/Mailing/Page/Browse.hlp templates/CRM/Mailing/Page/Report.tpl
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Mailing Name"
-msgstr ""
+msgstr "Nome Mailing"
 
 #: CRM/Mailing/Selector/Event.php CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Type"
@@ -2015,7 +2015,7 @@ msgstr "Sostenitore"
 #: xml/templates/message_templates/pcp_notify_text.tpl
 #: CRM/Report/Form/Member/Lapse.php
 msgid "Current Status"
-msgstr ""
+msgstr "Status Corrente"
 
 #: CRM/Pledge/BAO/Query.php templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
