--- a/po/it_IT/drupal-civicrm.po
+++ b/po/it_IT/drupal-civicrm.po
@@ -6,13 +6,14 @@
 # Johan Soderkvist <johansoderkvist@ikreativo.it>, 2012
 # mitch.camp <kal-el@hotmail.it>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Valdes <valdes.fainozzi@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-03-13 21:28+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: Italian (http://www.transifex.com/projects/p/civicrm/language/it/)\n"
+"PO-Revision-Date: 2016-01-13 23:03+0000\n"
+"Last-Translator: Valdes <valdes.fainozzi@gmail.com>\n"
+"Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -137,7 +138,7 @@ msgstr "Stato Partecipante"
 #: drupal/modules/views/civicrm/civicrm_handler_filter_payment_instrument.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_contribution_type.inc
 msgid "Contribution Type"
-msgstr ""
+msgstr "Tipo di contribuzione"
 
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_contribution_page.inc
@@ -311,12 +312,12 @@ msgstr "Telefono"
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/VoterReservation.php
 msgid "Survey"
-msgstr ""
+msgstr "Sondaggio"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/VoterReservation.php
 msgid "- select -"
-msgstr ""
+msgstr "- seleziona -"
 
 #: CRM/Core/Permission.php
 msgid "add contacts"
@@ -593,7 +594,7 @@ msgstr "Visualizza lavagna dei contatti"
 
 #: drupal/civicrm.module
 msgid "Edit '!1'"
-msgstr ""
+msgstr "Modifica '!1'"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 msgid ""
@@ -634,7 +635,7 @@ msgstr "Gruppo di CiviCRM"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 msgid "-- Select --"
-msgstr ""
+msgstr "-- Seleziona --"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 msgid "Drupal Role"
@@ -883,7 +884,7 @@ msgstr "Il Comune è"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "State / Province"
-msgstr ""
+msgstr "Provincia / Stato"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The State or Province of the Address"
@@ -923,7 +924,7 @@ msgstr "La Città"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "In Global Settings"
-msgstr ""
+msgstr "In Impostazioni globali"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Address Name"
@@ -1556,7 +1557,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who scheduled this activity"
-msgstr ""
+msgstr "Il contatto che ha programmato questa attività"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Source Contact"
@@ -1568,7 +1569,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who made this activity"
-msgstr ""
+msgstr "Il contatto che ha fatto questa attività"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Type of Activity"
@@ -1652,7 +1653,7 @@ msgstr "È l'attività creata dal sistema?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Activity Assignments"
-msgstr ""
+msgstr "CiviCRM Assegnazioni di Attività "
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Assignee Contact ID"
@@ -1660,7 +1661,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who is assigned the activity."
-msgstr ""
+msgstr "Il contatto a cui viene assegnata l'attività."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Assignee Contact ID"
@@ -1668,7 +1669,7 @@ msgstr "ID Contatto Assegnatario CiviCRM "
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Activity Targets"
-msgstr ""
+msgstr "CiviCRM Obiettivi Attività "
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Target Contact ID"
@@ -1676,7 +1677,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who is the activity's target."
-msgstr ""
+msgstr "Il contatto che è l'obiettivo dell'attività."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Target Contact ID"
@@ -2252,7 +2253,7 @@ msgstr "Sotto forma di WW (01-53)."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Custom: "
-msgstr ""
+msgstr "CiviCRM personalizzazione:"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Custom Data Field"
@@ -2282,7 +2283,7 @@ msgstr "Link questo campo per i tuoi utenti"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_contact_type.inc
 msgid "Contact type"
-msgstr ""
+msgstr "Tipo di contatto"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_relationship_type.inc
 msgid "Relationship Type"
@@ -2312,7 +2313,7 @@ msgstr "Link a un nodo Drupal o Vista, dal percorso base. L'ID contributo sarà 
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_tag_title.inc
 msgid "Tag Name"
-msgstr ""
+msgstr "Nome tag"
 
 #: drupal/modules/views/civicrm/views_handler_argument_civicrm_week.inc
 msgid "Week %week"
@@ -2328,7 +2329,7 @@ msgstr "mostra"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_mailing_name.inc
 msgid "Mailing Name"
-msgstr ""
+msgstr "Nome Mailing"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_event.inc
 msgid "Link to Registration Page"
@@ -2348,11 +2349,11 @@ msgstr "Link ad Elimina evento"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_website_type.inc
 msgid "Website type"
-msgstr ""
+msgstr "Tipo di Sito web "
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_state.inc
 msgid "State province"
-msgstr ""
+msgstr "Provincia / Stato"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_relationship.inc
 msgid "Link to View Relationship A-B"
@@ -2398,7 +2399,7 @@ msgstr "Link ai partecipanti agli eventi"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_phone_type.inc
 msgid "Phone type"
-msgstr ""
+msgstr "Tipo Telefono"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_activity.inc
 msgid "Link to View Activity"
@@ -2438,7 +2439,7 @@ msgstr "Link a un nodo Drupal o Vista, dal percorso base. L'ID di contatto sarà
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_group_title.inc
 msgid "Group Name"
-msgstr ""
+msgstr "Nome del gruppo"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_contact_link.inc
 msgid "Link this field to its CiviCRM Contact"
@@ -2454,7 +2455,7 @@ msgstr "Cerca anche un nodo e utilizza l'autore del nodo"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_activity.inc
 msgid "Activity type"
-msgstr ""
+msgstr "Tipo di attività"
 
 #: drupal/modules/civicrm_cck/civicrm_cck.module
 msgid "Contacts"
@@ -2474,7 +2475,7 @@ msgstr "CiviCRM tipo di contatto %1"
 
 #: drupal/modules/civicrm_cck/civicrm_cck.module
 msgid "Please ensure that the CiviCRM Contact exists"
-msgstr ""
+msgstr "Assicurarsi che il contatto CiviCRM esiste "
 
 #: drupal/modules/civicrm_cck/civicrm_cck.module
 msgid "Title (link)"
@@ -2486,7 +2487,7 @@ msgstr "Titolo (normale)"
 
 #: drupal/modules/civicrm_cck/civicrm_cck.module
 msgid "Select list"
-msgstr ""
+msgstr "Lista di selezione"
 
 #: drupal/modules/civicrm_cck/civicrm_cck.module
 msgid "Check boxes/radio buttons"
@@ -2502,7 +2503,7 @@ msgstr "%name: nessun posto valido trovato con quel titolo."
 
 #: drupal/modules/civicrm_cck/civicrm_cck.module
 msgid "CiviCRM Contact ID"
-msgstr ""
+msgstr "ID del Contatto CiviCRM"
 
 #: drupal/modules/civicrm_cck/civicrm_cck.module
 msgid "CiviCRM Contact Display"
@@ -2510,7 +2511,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_cck/civicrm_cck_handler_filter.inc
 msgid "Enter a contact name."
-msgstr ""
+msgstr "Inserisci il nome di un contatto."
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "CiviMember Roles Sync"
@@ -2537,11 +2538,11 @@ msgstr "Nome della regola (\"CiviMember Membership Type\" --> \"Drupal Role\")"
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Current Codes"
-msgstr ""
+msgstr "Codici Correnti"
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Expired Codes"
-msgstr ""
+msgstr "Codici Scaduti"
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid ""
@@ -2639,19 +2640,19 @@ msgstr ""
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Current Status"
-msgstr ""
+msgstr "Status Corrente"
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Select all CiviMember Status Rule(s) that represent current status."
-msgstr ""
+msgstr "Seleziona tutte le Regole dello Status di CiviMember che rappresentano lo status corrente."
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Expired Status"
-msgstr ""
+msgstr "Status Scaduto"
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Select all CiviMember Status Rule(s) that represent expired status."
-msgstr ""
+msgstr "Seleziona tutte le Regole dello Status di CiviMember che rappresentano lo status scaduto."
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid ""
@@ -2716,7 +2717,7 @@ msgstr "Il Contatto è stato creato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Created contact"
-msgstr ""
+msgstr "Contatto creato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact has been updated"
@@ -2724,7 +2725,7 @@ msgstr "Il contatto è stato aggiornato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Updated contact"
-msgstr ""
+msgstr "Contatto aggiornato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact has been viewed"
@@ -2732,7 +2733,7 @@ msgstr "Il contatto è stato visto"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Viewed contact"
-msgstr ""
+msgstr "Contatto visto"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact has been deleted"
@@ -2740,7 +2741,7 @@ msgstr "Il contatto è stato cancellato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Deleted contact"
-msgstr ""
+msgstr "Contatto cancellato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been created"
@@ -2748,7 +2749,7 @@ msgstr "Il mailing è stato creato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Created mailing"
-msgstr ""
+msgstr "Mailing creato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been updated"
@@ -2756,7 +2757,7 @@ msgstr "Il mailing è stato aggiornato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Updated Mailing"
-msgstr ""
+msgstr "Mailing aggiornato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing content has been uploaded"
@@ -2764,7 +2765,7 @@ msgstr "Il contenuto del mailing è stato caricato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing content uploaded"
-msgstr ""
+msgstr "Il contenuto del mailing è stato caricato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been scheduled"
@@ -2772,7 +2773,7 @@ msgstr "Il mailing è stato pianificato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Scheduled mailing"
-msgstr ""
+msgstr "Mailing programmato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been approved/rejected"
@@ -2780,7 +2781,7 @@ msgstr "Il mailing è stato approvato/rigettato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Approved mailing"
-msgstr ""
+msgstr "Mailing approvato"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Inform scheduler about the mailing"
@@ -2824,11 +2825,11 @@ msgstr ""
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Send Email"
-msgstr "Spedisci Email"
+msgstr "Invia email"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Send an Email"
-msgstr ""
+msgstr "Invia una email"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid ""
@@ -2838,23 +2839,23 @@ msgstr ""
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Message Subject"
-msgstr ""
+msgstr "Oggetto Messaggio"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Enter subject for the email"
-msgstr ""
+msgstr "Inserisci l'oggetto dell'e-mail"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Select the group"
-msgstr ""
+msgstr "Seleziona il Gruppo"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact will be added to selected group."
-msgstr ""
+msgstr "Il contatto sarà aggiunto al gruppo selezionato."
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact will be removed from selected group."
-msgstr ""
+msgstr "Il contatto sarà rimosso dal gruppo selezionato."
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact"
@@ -2902,15 +2903,15 @@ msgstr ""
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "Street Number"
-msgstr ""
+msgstr "Numero Civico"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "City"
-msgstr ""
+msgstr "Città"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "Postal Code"
-msgstr ""
+msgstr "Codice Postale"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "State"
@@ -2918,7 +2919,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "Is Held"
