po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -8,12 +8,12 @@
 # Julipan <stian@julipan.org>, 2011
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-28 15:13+0000\n"
+"PO-Revision-Date: 2016-01-14 15:01+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1973,7 +1973,7 @@ msgstr "Du har inte tillåtelse att ändra mall."
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Message Template"
-msgstr ""
+msgstr "Meddelandemall"
 
 #: CRM/Admin/Page/OptionGroup.php templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "View and Edit Options"
@@ -4088,7 +4088,7 @@ msgid ""
 "<strong>set of Data</strong> that the operation can be performed on (e.g. a "
 "group of contacts), and a <strong>Role</strong> that has permission to do "
 "this operation. Refer to the %1 for more info."
-msgstr ""
+msgstr "ACL:er (Access Control List) gör det möjligt att styra användares tillgång till data i CiviCRM. En ACL består av en <strong>operation</strong> (t.ex 'Visa' eller 'Redigera'), en <strong>uppsättning data</strong> som operationen kan göras på (t.ex en grupp av kontakter) och en <strong>roll</strong> som har tillåtelse att göra denna operation på det angivna datat. Studera %1 för mer detaljerad information."
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "Note that a CiviCRM ACL Role is not related to the Drupal Role."
@@ -4099,7 +4099,7 @@ msgid ""
 "<strong>EXAMPLE:</strong> 'Team Leaders' (<em>ACL Role</em>) can 'Edit' "
 "(<em>Operation</em>) all contacts in the 'Active Volunteers Group' "
 "(<em>Data</em>)."
-msgstr ""
+msgstr "<strong>EXEMPEL:</atrong> 'Teamledare' (<em>ACL-roll</em>) kan 'Redigera' (<em>operation</em>) all kontakter i gruppen 'Aktiva frivilliga' (<em>'data'</em>)."
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
@@ -4167,17 +4167,17 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "2. Assign Users to CiviCRM ACL Roles"
-msgstr ""
+msgstr "2. Tilldela CiviCRM:s ACL-roller till användare"
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
 "Once you have defined CiviCRM ACL Roles and granted ACLs to those Roles, use"
 " this link to assign users to role(s)."
-msgstr ""
+msgstr "När du har definierat ACL-roller och gett dem behörigheter via ACL:er, använd denna länk för att ge användare dessa roller."
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "3. Manage ACLs"
-msgstr ""
+msgstr "3. Hantera ACL:er"
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
@@ -4862,7 +4862,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Add Message Template"
-msgstr ""
+msgstr "Lägg till meddelandemall"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
@@ -5001,7 +5001,7 @@ msgstr "Det finns inga alternativval för denna alternativgrupp. Du kan <a href=
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid "Activity Types"
-msgstr ""
+msgstr "Åtgärdstyper"
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid ""
