--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -8,13 +8,13 @@
 # Isak Bergdahl <jahve@rocketmail.com>, 2013
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-14 22:26+0000\n"
-"Last-Translator: Anders Nilsson <anders@webmaestro.se>\n"
+"PO-Revision-Date: 2016-01-14 12:09+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1675,7 +1675,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Template"
-msgstr ""
+msgstr "Mall"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -1813,7 +1813,7 @@ msgstr "Publika arrangemang"
 msgid ""
 "When enabled, this event will be included in iCalendar feeds and displayed "
 "on your site's \"Upcoming Events\" block."
-msgstr ""
+msgstr "När ett arrangemang har satts som publikt kommer det med i iCalendar-flöden och visas i \"Kommande arrangemang\" på din webbplats."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -3741,7 +3741,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
-msgstr ""
+msgstr "Förvald roll"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Status ID"
