--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -47,7 +47,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 15:17+0000\n"
+"PO-Revision-Date: 2016-01-14 10:36+0000\n"
 "Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -3900,7 +3900,7 @@ msgstr "Bitte geben Sie einen gültigen Betrag ein (nur Ziffern und Dezimaltrenn
 
 #: CRM/Contact/Form/Search/Custom/ContributionAggregate.php
 msgid "...and $"
-msgstr "...und $"
+msgstr "...und €"
 
 #: CRM/Contact/Form/Search/Custom/ContributionAggregate.php
 #: CRM/Contact/Form/Search/Custom/TagContributions.php
