po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -12,12 +12,12 @@
 # bumby <martin@gnutiken.se>, 2011
 # Mikael Andersson <mikael.andersson@charity.se>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-28 14:54+0000\n"
+"PO-Revision-Date: 2016-01-14 14:59+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -171,7 +171,7 @@ msgstr "Enhetstabell"
 #: CRM/ACL/DAO/ACL.php CRM/ACL/Form/ACL.php
 #: CRM/Contact/DAO/ACLContactCache.php templates/CRM/ACL/Page/ACL.tpl
 msgid "Operation"
-msgstr "Funktion"
+msgstr "Operation"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "Object Table"
@@ -4265,14 +4265,14 @@ msgstr "Välj minst en etikett."
 #: CRM/Contact/Form/Task/AddToTag.php
 msgid "%count contact tagged"
 msgid_plural "%count contacts tagged"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count kontakt etiketterad"
+msgstr[1] "%count kontakter etiketterade"
 
 #: CRM/Contact/Form/Task/AddToTag.php
 msgid "%count contact already had this tag"
 msgid_plural "%count contacts already had this tag"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count kontakt hade redan etiketten"
+msgstr[1] "%count kontakter hade redan etiketten"
 
 #: CRM/Contact/Form/Task/AddToTag.php
 msgid "Added Tag <em>%1</em>"
@@ -6061,7 +6061,7 @@ msgstr "Ogiltig meddelandemall"
 
 #: CRM/Core/BAO/MessageTemplate.php
 msgid "Selected message template has been deleted."
-msgstr ""
+msgstr "Meddelandemallen har tagits bort."
 
 #: CRM/Core/BAO/MessageTemplate.php
 msgid "Did not find a message template with id of %1."
@@ -10772,7 +10772,7 @@ msgstr ""
 
 #: CRM/SMS/Form/Upload.php
 msgid "Please provide a Template Name."
-msgstr ""
+msgstr "Ange ett namn för mallen."
 
 #: CRM/SMS/Form/Upload.php
 msgid "Invalid token code"
@@ -12038,15 +12038,15 @@ msgstr ""
 
 #: templates/CRM/ACL/Form/EntityRole.tpl
 msgid "Assign ACL Role"
-msgstr ""
+msgstr "Tilldela ACL-roller"
 
 #: templates/CRM/ACL/Form/EntityRole.tpl
 msgid "WARNING: Deleting this option will remove this ACL Role Assignment."
-msgstr ""
+msgstr "VARNING: om du tar bort detta alternativ så försvinner dessa tilldelningen av denna ACL-roll."
 
 #: templates/CRM/ACL/Form/EntityRole.tpl
 msgid "Select an ACL Role to assign."
-msgstr ""
+msgstr "Välj en ACL-roll att tilldela."
 
 #: templates/CRM/ACL/Form/EntityRole.tpl
 msgid ""
@@ -12074,14 +12074,14 @@ msgid ""
 "data</strong> that the operation can be performed on (e.g. a group of "
 "contacts, a profile or a set of custom fields), and a <strong>Role</strong> "
 "that has permission to do this operation. Refer to the %1 for more info."
-msgstr ""
+msgstr "ACL:er (Access Control List) gör det möjligt att styra användares tillgång till data i CiviCRM. En ACL består av en <strong>operation</strong> (t.ex 'Visa' eller 'Redigera'), en <strong>uppsättning data</strong> som operationen kan göras på (t.ex en grupp av kontakter, en profil eller en uppsättning anpassade datafält) och en <strong>roll</strong> som har tillåtelse att göra denna operation på det angivna datat. Studera %1 för mer detaljerad information."
 
 #: templates/CRM/ACL/Page/ACL.tpl templates/CRM/ACL/Page/ACLBasic.tpl
 msgid ""
 "You can add or modify your ACLs below. You can create additional ACL Roles "
 "<a href='%2'>here</a>... and you can assign Roles to CiviCRM contacts who "
 "are users of your site <a href='%1'>here</a>."
-msgstr ""
+msgstr "Du kan lägga till och ändra dina ACL:er nedan. Du kan skapa flera ACL-roller <a href='%2'>här</a>, och du kan ge CiviCRM-kontakter dessa roller inom din webbplats <a href='%1'>här</a>."
 
 #: templates/CRM/ACL/Page/ACL.tpl
 msgid "Which Data"
@@ -12103,7 +12103,7 @@ msgstr "status"
 
 #: templates/CRM/ACL/Page/ACL.tpl templates/CRM/ACL/Page/ACLBasic.tpl
 msgid "There are no ACLs entered. You can <a href='%1'>add one</a>."
-msgstr ""
+msgstr "Det finns inga ACL:er. Du kan <a href='%1'>lägga till en</a>."
 
 #: templates/CRM/ACL/Page/ACL.tpl templates/CRM/ACL/Page/ACLBasic.tpl
 #: templates/CRM/ACL/Page/EntityRole.tpl
@@ -12121,7 +12121,7 @@ msgid ""
 "data</strong> that the operation can be performed on (e.g. a group of "
 "contacts), and a <strong>Role</strong> that has permission to do this "
 "operation. Refer to the %1 for more info."
-msgstr ""
+msgstr "ACL:er (Access Control List) gör det möjligt att styra användares tillgång till data i CiviCRM. En ACL består av en <strong>operation</strong> (t.ex 'Visa' eller 'Redigera'), en <strong>uppsättning data</strong> som operationen kan göras på (t.ex en grupp av kontakter) och en <strong>roll</strong> som har tillåtelse att göra denna operation på det angivna datat. Studera %1 för mer detaljerad information."
 
 #: templates/CRM/ACL/Page/EntityRole.tpl
 msgid ""
@@ -23237,7 +23237,7 @@ msgstr "Ta bort etiketter från åtgärder"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Tag Contact"
-msgstr ""
+msgstr "Etikettera kontakt"
 
 #: CRM/Contact/DAO/Contact.php xml/templates/civicrm_data.tpl
 msgid "Formal Title"
