po: update po/sv_SE/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -10,12 +10,12 @@
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # bumby <martin@gnutiken.se>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-28 14:07+0000\n"
+"PO-Revision-Date: 2016-01-14 15:01+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -936,7 +936,7 @@ msgstr "ACL-roller"
 
 msgctxt "menu"
 msgid "Manage ACLs"
-msgstr "Hantera ACLs"
+msgstr "Hantera ACL:er"
 
 msgctxt "menu"
 msgid "Assign Users to ACL Roles"
