--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -41,7 +41,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-02 15:50+0000\n"
+"PO-Revision-Date: 2016-01-17 14:34+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -9714,7 +9714,7 @@ msgstr "Options de fusion"
 
 #: CRM/Export/Form/Select.php
 msgid "Postal Mailing Export"
-msgstr "Export pour postage"
+msgstr "Export pour Mailing postal"
 
 #: CRM/Export/Form/Select.php
 msgid "Additional Group for Export"
