po: update po/fr_FR/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/install.po
+++ b/po/fr_FR/install.po
@@ -9,7 +9,7 @@
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Mathieu Lutfy <mathieu@bidon.ca>, 2014-2015
-# Peter <webmaster@lebouclier.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2015-2016
 # Vincent Hammadache <vhammadache@gmail.com>, 2015
 # Vincent <vincent.primault@gmail.com>, 2014
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:24-0500\n"
-"PO-Revision-Date: 2016-01-13 15:39+0000\n"
-"Last-Translator: Baptiste Bisson <bbisson.baptiste@gmail.com>\n"
+"PO-Revision-Date: 2016-01-17 14:52+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -308,7 +308,7 @@ msgstr "Dossier '%1' trouvé"
 msgid ""
 "The user account used by your web-server %1 needs to be granted write access"
 " to the following directory in order to configure the CiviCRM settings file:"
-msgstr "Le compte utilisateur utilisé par votre serveur %1 a besoin d'avoir accordé l'accès écriture sur le répertoire suivant dans le but de configurer le fichier d'options CiviCRM"
+msgstr "Le compte utilisateur utilisé par votre serveur %1 a besoin d'avoir accordé l'accès écriture sur le répertoire suivant dans le but de configurer le fichier d'options CiviCRM :"
 
 #: install/index.php
 msgid ""
