po: update po/hu_HU/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/common-base.po
+++ b/po/hu_HU/common-base.po
@@ -8,12 +8,12 @@
 # brucezly <brucezly@gmail.com>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Szabo Attila <atekka@gmail.com>, 2013
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2015
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 09:21+0000\n"
+"PO-Revision-Date: 2016-01-18 12:52+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -10888,7 +10888,7 @@ msgstr "%1 felhasználó fiók regisztrálás opció?"
 
 #: CRM/UF/Form/AdvanceSetting.php xml/templates/civicrm_data.tpl
 msgid "None"
-msgstr "Egy sem"
+msgstr "nincs"
 
 #: CRM/UF/Form/AdvanceSetting.php
 msgid "Optional"
@@ -20343,7 +20343,7 @@ msgstr "Avery 5395 kompatibilis címkék logóval (4 darab kettesével, 59.2mm x
 
 #: xml/templates/civicrm_data.tpl
 msgid "Author Only"
-msgstr "Csak a szerző"
+msgstr "Létrehozó"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Direct Mail"
@@ -22815,7 +22815,7 @@ msgstr "A frissítést nem sikerült átirányítani"
 
 #: CRM/Upgrade/Snapshot/V4p2/Price/BAO/Field.php
 msgid "-none-"
-msgstr "-egyiksem-"
+msgstr "-nincs-"
 
 #: CRM/Upgrade/ThreeOne/ThreeOne.php CRM/Upgrade/ThreeZero/ThreeZero.php
 msgid "Pre-condition failed for upgrade to %1."
