po: update po/de_DE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -47,8 +47,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-19 17:05+0000\n"
-"Last-Translator: Niko Bochan <bochan@systopia.de>\n"
+"PO-Revision-Date: 2016-01-21 10:23+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -13592,7 +13592,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/NewContact.tpl
 msgid "Type in a partial or complete name of an existing contact."
-msgstr "Kompletter ODER Teil des Namens ODER Email"
+msgstr "Kompletten oder teilweisen Namen eines Kontakts eingeben."
 
 #: templates/CRM/Contact/Form/OnBehalfOf.tpl
 msgid "Phone and Email"
