po: update po/ca_ES/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/campaign.po
+++ b/po/ca_ES/campaign.po
@@ -4,13 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2014-2015
+# francescbassas <francesc@babu.cat>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-21 15:19+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -570,7 +570,7 @@ msgstr "Activar petició"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Sign"
-msgstr "Signatura"
+msgstr "Firma"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Sign Petition"
@@ -578,7 +578,7 @@ msgstr "Firma la petició"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Signatures"
-msgstr "Signatura"
+msgstr "Firmes"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "List the signatures"
@@ -990,7 +990,7 @@ msgstr "Pas 2: comproveu el correu electrònic "
 msgid ""
 "To complete and confirm your signature, please follow the activation "
 "instructions sent to the email address you provided."
-msgstr "Per a completar i confirmar la signatura, seguint les instruccions d'activació enviades a la direcció de correu electrònic."
+msgstr "Per a completar i confirmar la teva firma, seguint les instruccions d'activació enviades a la direcció de correu electrònic."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid "IMPORTANT"
